samples/_failures_safe/1761178126_a0ad0a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8e19e95f.c: In function ‘main’:
./samples/SAFE/__tmp_8e19e95f.c:155:9: error: expected expression at end of input
  155 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_8e19e95f.c:155:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8e19e95f.c:155:9: error: expected declaration or statement at end of input
